--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1>Harvey <span style="color:red; font-weight: bold;">Claxton</span></h1>
                 <h3>I'm a Media Production graduate</h3>
                 <form>
-                    <a href=".Document/CV%20DRAFT.pdf" class="btn" download>Download CV</a>
+                    <a href="Document/CV%20DRAFT.pdf" class="btn" download>Download CV</a>
                 </form>
             </div>
 
