--- a/Aboutme.html
+++ b/Aboutme.html
@@ -128,7 +128,7 @@
         
 
             <script src="Javascript/aboutmeinfo.js"></script>
-            <script src="javascript/navscript.js"></script>
+            <script src="Javascript/navscript.js"></script>
             <script src="Javascript/darkmode.js"></script>
 
             </body>
