--- a/ContactMe.html
+++ b/ContactMe.html
@@ -87,7 +87,7 @@
                <!--  Script Section / linking to page  -->
         
 
-        <script src="javascript/navscript.js"></script>
+        <script src="Javascript/navscript.js"></script>
         <script src="Javascript/darkmode.js"></script>
 
 
