--- a/ImagePortfolio.html
+++ b/ImagePortfolio.html
@@ -95,7 +95,7 @@
         
                <!--  Script Section / linking to page  -->
 
-        <script src="javascript/navscript.js"></script>
+        <script src="Javascript/navscript.js"></script>
         <script src="Javascript/darkmode.js"></script>
 
 
