--- a/Thankspage.html
+++ b/Thankspage.html
@@ -74,7 +74,7 @@
         
 
         <script src="https://cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
-        <script src="javascript/navscript.js"></script>
+        <script src="Javascript/navscript.js"></script>
         <script src="Javascript/darkmode.js"></script>
         <script src="Javascript/form.js"></script>
 
