--- a/VideoWork.html
+++ b/VideoWork.html
@@ -84,7 +84,7 @@
         
 
        
-        <script src="javascript/navscript.js"></script>
+        <script src="Javascript/navscript.js"></script>
         <script src="Javascript/darkmode.js"></script>
 
 
