--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
 
 
-        <script src="javascript/navscript.js"></script>
-        <script src="javascript/testimonial.js"></script>
+        <script src="Javascript/navscript.js"></script>
+        <script src="Javascript/testimonial.js"></script>
         <script src="Javascript/darkmode.js"></script>
 
     </body>
