--- a/ImagePortfolio.html
+++ b/ImagePortfolio.html
@@ -53,22 +53,22 @@
             <h1><span style="color: red">Image </span>Content</h1>
 
             <div class="gallery">
-                <a href="Images/ImageGalleryElements/PI-1.jpg" data-lightbox="mygallery" data-title="Nature 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-1%20TN.jpg" alt="Nature 1 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-2.jpg" data-lightbox="mygallery" data-title="Nature 2"><img src="Images/ImageGalleryElements/Thumbnails/PI-2%20TN.jpg" alt="Nature 2 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-3.jpg" data-lightbox="mygallery" data-title="Nature 3"><img src="Images/ImageGalleryElements/Thumbnails/PI-3%20TN.jpg" alt="Nature 3 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-4.jpg" data-lightbox="mygallery" data-title="Nature 4"><img src="Images/ImageGalleryElements/Thumbnails/PI-4%20TN.jpg" alt="Nature 4 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-5.jpg" data-lightbox="mygallery" data-title="Nature 5"><img src="Images/ImageGalleryElements/Thumbnails/PI-5%20TN.jpg" alt="Nature 5 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-6.jpg" data-lightbox="mygallery" data-title="Nature 6"><img src="Images/ImageGalleryElements/Thumbnails/PI-6%20TN.jpg" alt="Nature 6 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-7.jpg" data-lightbox="mygallery" data-title="Nature 7"><img src="Images/ImageGalleryElements/Thumbnails/PI-7%20TN.jpg" alt="Nature 7 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-13.jpg" data-lightbox="mygallery" data-title="Derive 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-13%20TN.jpg" alt="Derive 1 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-14.jpg" data-lightbox="mygallery" data-title="Derive 2"><img src="Images/ImageGalleryElements/Thumbnails/PI-14%20TN.jpg" alt="Derive 2 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-15.jpg" data-lightbox="mygallery" data-title="Derive 3"><img src="Images/ImageGalleryElements/Thumbnails/PI-15%20TN.jpg" alt="Derive 3 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-10.jpg" data-lightbox="mygallery" data-title="Street 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-10%20TN.jpg" alt="Street 1 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-9.jpg" data-lightbox="mygallery" data-title="Street 2"><img src="Images/ImageGalleryElements/Thumbnails/PI-9%20TN.jpg" alt="Street 2 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-8.jpg" data-lightbox="mygallery" data-title="Street 3"><img src="Images/ImageGalleryElements/Thumbnails/PI-8%20TN.jpg" alt="Street 3 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-11.jpg" data-lightbox="mygallery" data-title="Street 4"><img src="Images/ImageGalleryElements/Thumbnails/PI-11%20TN.jpg" alt="Street 4 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-12.jpg" data-lightbox="mygallery" data-title="Street 5"><img src="Images/ImageGalleryElements/Thumbnails/PI-12%20TN.jpg" alt="Street 5 Image"></a>
-                <a href="Images/ImageGalleryElements/PI-16.jpg" data-lightbox="mygallery" data-title="Composition 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-16%20TN.jpg" alt="Composition 1 Image"></a>
+                <a href="Images/ImageGalleryElements/PI-1.jpg" data-lightbox="mygallery" data-title="Nature 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-1%20TN.jpg" alt="A group of red beads present in a yellow tinted environment"></a>
+                <a href="Images/ImageGalleryElements/PI-2.jpg" data-lightbox="mygallery" data-title="Nature 2"><img src="Images/ImageGalleryElements/Thumbnails/PI-2%20TN.jpg" alt="An image of a squirrel"></a>
+                <a href="Images/ImageGalleryElements/PI-3.jpg" data-lightbox="mygallery" data-title="Nature 3"><img src="Images/ImageGalleryElements/Thumbnails/PI-3%20TN.jpg" alt="A blue tint image showcasing a frosting plant"></a>
+                <a href="Images/ImageGalleryElements/PI-4.jpg" data-lightbox="mygallery" data-title="Nature 4"><img src="Images/ImageGalleryElements/Thumbnails/PI-4%20TN.jpg" alt="A red flower in a dark environment"></a>
+                <a href="Images/ImageGalleryElements/PI-5.jpg" data-lightbox="mygallery" data-title="Nature 5"><img src="Images/ImageGalleryElements/Thumbnails/PI-5%20TN.jpg" alt="A red flower with a blue sky"></a>
+                <a href="Images/ImageGalleryElements/PI-6.jpg" data-lightbox="mygallery" data-title="Nature 6"><img src="Images/ImageGalleryElements/Thumbnails/PI-6%20TN.jpg" alt="Red beads connected to a small branch with cobwebs"></a>
+                <a href="Images/ImageGalleryElements/PI-7.jpg" data-lightbox="mygallery" data-title="Nature 7"><img src="Images/ImageGalleryElements/Thumbnails/PI-7%20TN.jpg" alt="A collection of Red beads in a dark environment"></a>
+                <a href="Images/ImageGalleryElements/PI-13.jpg" data-lightbox="mygallery" data-title="Derive 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-13%20TN.jpg" alt="Littered Bottle"></a>
+                <a href="Images/ImageGalleryElements/PI-14.jpg" data-lightbox="mygallery" data-title="Derive 2"><img src="Images/ImageGalleryElements/Thumbnails/PI-14%20TN.jpg" alt="Bottle Cap Littered"></a>
+                <a href="Images/ImageGalleryElements/PI-15.jpg" data-lightbox="mygallery" data-title="Derive 3"><img src="Images/ImageGalleryElements/Thumbnails/PI-15%20TN.jpg" alt="A cigarette in an ashtray"></a>
+                <a href="Images/ImageGalleryElements/PI-10.jpg" data-lightbox="mygallery" data-title="Street 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-10%20TN.jpg" alt="Man in mask posing in the city"></a>
+                <a href="Images/ImageGalleryElements/PI-9.jpg" data-lightbox="mygallery" data-title="Street 2"><img src="Images/ImageGalleryElements/Thumbnails/PI-9%20TN.jpg" alt="A man in mask looking at the floor in a park"></a>
+                <a href="Images/ImageGalleryElements/PI-8.jpg" data-lightbox="mygallery" data-title="Street 3"><img src="Images/ImageGalleryElements/Thumbnails/PI-8%20TN.jpg" alt="A man sitting in a shopping trolly"></a>
+                <a href="Images/ImageGalleryElements/PI-11.jpg" data-lightbox="mygallery" data-title="Street 4"><img src="Images/ImageGalleryElements/Thumbnails/PI-11%20TN.jpg" alt="A man posing infront of a dragon graffiti"></a>
+                <a href="Images/ImageGalleryElements/PI-12.jpg" data-lightbox="mygallery" data-title="Street 5"><img src="Images/ImageGalleryElements/Thumbnails/PI-12%20TN.jpg" alt="A shopping key hanging on a chain"></a>
+                <a href="Images/ImageGalleryElements/PI-16.jpg" data-lightbox="mygallery" data-title="Composition 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-16%20TN.jpg" alt="A villain standing in an alleyway"></a>
 
             </div>
 
