--- a/Thankspage.html
+++ b/Thankspage.html
@@ -3,6 +3,8 @@
 
     <head>
 
+          <!-- This meta command refreshes the page after 5 seconds and navigating the user back to the homepage "index.html"  -->
+        
         <meta http-equiv='refresh' content='5; URL=index.html'>
 
         <meta charset="utf-8">
