--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
         </section>
         
+        <!-- Tutorial used = Modern Web 2021. (2021, June 28). -->
+        
              <!-- A sliding testimonial section displaying information that people have said about Harvey, This section works alongside testimonial.js  -->
 
 
