--- a/Aboutme.html
+++ b/Aboutme.html
@@ -64,6 +64,7 @@
                 <button class="open_button" id="open_childhood_modal">Childhood</button>
                 <div id="modal_childhood" class="modal-container">
                     <div class="modal">
+                        <!-- Img source = Oman Flag. (1995, January 1). -->
                         <img id="oman" src="Images/AboutPage%20Images/omanflag.png" alt="omanflag">
                         <h3>Childhood</h3>
                         <p>I was born in the UK and left the country when I hit the age of 2. My family moved to a country called Oman, this country would be where I spent my entire upbringing. I went to an international school in which I made friends from each corner of the world. Oman is located within the middle east close to Dubai and is known for its beaches/quiet lifestyle. The school I went to was an IB school in which I can happily say I had obtained my diploma. After graduating from high school I moved to the UK where I enrolled in DMU.</p>
@@ -79,6 +80,7 @@
                 <button class="open_button" id="open_hobbies_modal">Hobbies</button>
                 <div id="modal_hobbies" class="modal-container">
                     <div class="modal">
+                        <!-- Img source = Sports Equipment. (2010, January 1). -->
                         <img id="sports" src="Images/AboutPage%20Images/Sportsimg.png" alt="sports">
                         <h3>Hobbies</h3>
                         <p>My favorite hobby and passion are competitive video games. I love participating in and watching tournaments surrounding my favorite games. In high school, I was an extremely active person and played a variety of sports: Football, Basketball, Athletics, and Baseball. If I am not playing video games or sports I am most likely relaxing watching Twitch.tv or Youtube.</p>
@@ -94,6 +96,7 @@
                 <button class="open_button" id="open_achievements_modal">Achievements</button>
                 <div id="modal_achievements" class="modal-container">
                     <div class="modal">
+                        <!-- Img source = S.R. (2007, January 1). -->
                         <img id="sparten" src="Images/AboutPage%20Images/spartenrace%20logo.png" alt="spartenlogo">
                         <h3>Achievements</h3>
                         <p>Throughout my life I have obtained countless amounts of Sportsmanship awards, A most improved mathematics award, the superintendent award and completed the Spartan Race.</p>
