--- a/Projects.html
+++ b/Projects.html
@@ -57,7 +57,7 @@
                 <h2>Video Cave VFX</h2>
 
                 <div class="projectsubtext">
-                    <p>This was a project created during my second year at De Montfort University. The purpose of this blog was to educate those interested in getting started within the world of VFX. The blog contains a variety of walkthrough guides exploring fascinating effects and features within Adobe AfterEffects.</p>
+                    <p>Video Cave VFX was created during my second year at De Montfort University. The purpose of this website/blog was to educate those interested in getting started within the world of VFX. The blog contains a variety of walkthrough guides exploring fascinating effects and features within Adobe AfterEffects.</p>
 
 
 
@@ -84,7 +84,7 @@
                 <h2>Broken Souls Rescue</h2>
 
                 <div class="projectsubtext">
-                    <p>This project was part of my social media course at the university. Our task was to reach out to an organization and provide social media support throughout a set time period. I had chosen to work with an animal shelter and assist in the promotion of a giftshop. Apart from the gift shop, I had created promotional footage for the charity to release as well as a series on all social media platforms showcasing specific rescued animals the organization had fostered and given a better life.</p>
+                    <p>This project was part of my social media course at De Montfort University. Our task was to reach out to an organization and provide social media support throughout a set time period. I had chosen to work with an animal shelter and assist in the promotion of a gift shop. Apart from the gift shop, I had created promotional footage for the charity to release as well as a series on all social media platforms showcasing specific rescued animals the organization had fostered and given a better life.</p>
                 </div>  
 
 
