--- a/Aboutme.html
+++ b/Aboutme.html
@@ -67,7 +67,7 @@
                         <!-- Img source = Oman Flag. (1995, January 1). -->
                         <img id="oman" src="Images/AboutPage%20Images/omanflag.png" alt="omanflag">
                         <h3>Childhood</h3>
-                        <p>I was born in the UK and left the country when I hit the age of 2. My family moved to a country called Oman, this country would be where I spent my entire upbringing. I went to an international school in which I made friends from each corner of the world. Oman is located within the middle east close to Dubai and is known for its beaches/quiet lifestyle. The school I went to was an IB school in which I can happily say I had obtained my diploma. After graduating from high school I moved to the UK where I enrolled in DMU.</p>
+                        <p>I was born in the UK and left the country when I hit the age of 2. My family moved to a country called Oman, this country would be where I spent my entire upbringing. I went to an international school in which I made friends from each corner of the world. Oman is located in the middle east close to Dubai and is known for its beaches/and quiet lifestyle. The school I went to was an IB school in which I can happily say I had obtained my IB diploma. After graduating from high school I moved to the UK where I enrolled in DMU to study media production.</p>
 
                         <button id="close_childhood_modal">Go back</button>
    <!--  A close button is present within the content, once the javascript allows the information to become visible this button would be used to navigate back to the default section page (childhood, Hobbies etc)  -->
@@ -83,7 +83,7 @@
                         <!-- Img source = Sports Equipment. (2010, January 1). -->
                         <img id="sports" src="Images/AboutPage%20Images/Sportsimg.png" alt="sports">
                         <h3>Hobbies</h3>
-                        <p>My favorite hobby and passion are competitive video games. I love participating in and watching tournaments surrounding my favorite games. In high school, I was an extremely active person and played a variety of sports: Football, Basketball, Athletics, and Baseball. If I am not playing video games or sports I am most likely relaxing watching Twitch.tv or Youtube.</p>
+                        <p>My favorite hobby and passion are competitive video games. I love participating in and watching tournaments surrounding my favorite games. In high school, I was an extremely active person and played a variety of sports: Football, Basketball, Athletics, and Baseball. If I am not playing video games or sports I am most likely relaxing watching my favorite streamers on Twitch or Youtube.</p>
 
                         <button id="close_hobbies_modal">Go back</button>
 
