--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 <!--  "testcardthumb" stores infromation such as an image of a person, there name overlayed ontop of the image, followed by this div is a "testcardbody" containing the description. These 2 divs are both under a main div "testcard" hosting all the information   -->
                         <div class="testcardthumb">
                             <img class="testimage" src="Images/Testimony%20Images/Testimonial1.jpeg" alt="Testimonial1">
-                            <span class="testname">Full Name</span>
+                            <span class="testname">John Smith</span>
                         </div>
                         <div class="testcardbody">
                             <p class="testtext">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five 
+                                Harvey is a fantastic student who has excelled in the field of video production, he has shown a massive amount of commitment in his studies and research within the world of video editing and creation. He has produced many eye-catching products of high standard that are enjoyable to watch.
                             </p>
                         </div>
 
@@ -135,11 +135,11 @@
 
                         <div class="testcardthumb">
                             <img class="testimage" src="Images/Testimony%20Images/Testimonial2.jpeg" alt="Testimonial2">
-                            <span class="testname">Full Name</span>
+                            <span class="testname">Susan Hall</span>
                         </div>
                         <div class="testcardbody">
                             <p class="testtext">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five 
+                                Harvey has proven to understand how to use a camera to its fullest potential, using the correct focal lengths and aperture values in the appropriate environments. His portfolios are of high standard showcasing a variety of interesting and imaginative enviroments. Other than camera work he has proven a solid foundation and understanding of the Adobe software to bring his images to life.
                             </p>
                         </div>
 
@@ -150,11 +150,11 @@
 
                         <div class="testcardthumb">
                             <img class="testimage" src="Images/Testimony%20Images/Testimonial3.jpeg" alt="Testimonial3">
-                            <span class="testname">Full Name</span>
+                            <span class="testname">Chris Sun</span>
                         </div>
                         <div class="testcardbody">
                             <p class="testtext">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five 
+                               Harvey has a deep understanding of how social media impacts the world. He has proven to understand how to take advantage of social media platforms to build a following over a period of time and promote businesses on multiple platforms. Harvey is a hardworking person who achieves the goals he has set for himself.
                             </p>
                         </div>
 
