--- a/ContactMe.html
+++ b/ContactMe.html
@@ -48,6 +48,8 @@
 
         <div class="contactMesh">
 
+                 <h1><span style="color: red">Contact </span>Me</h1>
+            
             <form id="contactform" action="Thankspage.html">
                 
                    <!--  Each label is obtaining attributes which after the user inputs an answer that information will go through a javascript file and matching the results with the correct parameters defined (for this case it is the "fname", "email", and "about" data)  -->
