--- a/ImagePortfolio.html
+++ b/ImagePortfolio.html
@@ -51,6 +51,10 @@
         <div class="portfoliomesh">
 
             <h1><span style="color: red">Image </span>Content</h1>
+            
+             <form>
+                    <a href="Document/CV%20DRAFT.pdf" class="btn" download>Download Portfolio</a>
+                </form>
 
             <div class="gallery">
                 <a href="Images/ImageGalleryElements/PI-1.jpg" data-lightbox="mygallery" data-title="Nature 1"><img src="Images/ImageGalleryElements/Thumbnails/PI-1%20TN.jpg" alt="A group of red beads present in a yellow tinted environment"></a>
