--- a/ImagePortfolio.html
+++ b/ImagePortfolio.html
@@ -52,7 +52,7 @@
 
             <h1><span style="color: red">Image </span>Content</h1>
             
-             <form>
+             <form align="center">
                     <a href="Document/CV%20DRAFT.pdf" class="btn" download>Download Portfolio</a>
                 </form>
 
