--- a/Thankspage.html
+++ b/Thankspage.html
@@ -5,7 +5,7 @@
 
           <!-- This meta command refreshes the page after 5 seconds and navigating the user back to the homepage "index.html"  -->
         
-        <meta http-equiv='refresh' content='5; URL=index.html'>
+      <!--  <meta http-equiv='refresh' content='5; URL=index.html'>   -->
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
