--- a/ImagePortfolio.html
+++ b/ImagePortfolio.html
@@ -75,7 +75,7 @@
             </div>
             
               <form id="portdown" align="center">
-                    <a href="Document/CV%20DRAFT.pdf" class="btn" download>Download Portfolio</a>
+                    <a href="Document/CV%20DRAFT.pdf" class="btn" download>Nature Book</a>
                 </form>
             
 
