--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!--  A form is used with an anchor to allow the users to download a .pdf document  -->
                 <!-- This anchor has a class titled "btn" inwhich it is designed with css to appear as an attractive clickable button (hover effects and more)  -->
                 <form>
-                    <a href="Document/CV%20DRAFT.pdf" class="btn" download>Download CV</a>
+                    <a href="Document/HarveyClaxton%20CV.pdf" class="btn" download>Download CV</a>
                 </form>
             </div>
 
